<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/groupsFragment">

    <fragment
        android:id="@+id/groupsFragment"
        android:name="app.andama.savyn.ui.groups.GroupsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_groups">

        <action
            android:id="@+id/action_groups_to_detail"
            app:destination="@id/groupDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/groupDetailFragment"
        android:name="app.andama.savyn.ui.members.GroupDetailFragment"
        android:label="@string/group_detail"
        tools:layout="@layout/fragment_group_detail">

        <argument
            android:name="groupId"
            app:argType="long" />

        <action
            android:id="@+id/action_detail_to_contributions"
            app:destination="@id/contributionsFragment" />
        <action
            android:id="@+id/action_detail_to_analytics"
            app:destination="@id/analyticsFragment" />
        <action
            android:id="@+id/action_detail_to_goals"
            app:destination="@id/goalsFragment" />
    </fragment>

    <fragment
        android:id="@+id/contributionsFragment"
        android:name="app.andama.savyn.ui.contributions.ContributionsFragment"
        android:label="@string/contributions"
        tools:layout="@layout/fragment_contributions">

        <argument
            android:name="groupId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/analyticsFragment"
        android:name="app.andama.savyn.ui.analytics.AnalyticsFragment"
        android:label="@string/analytics"
        tools:layout="@layout/fragment_analytics">

        <argument
            android:name="groupId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/goalsFragment"
        android:name="app.andama.savyn.ui.goals.GoalsFragment"
        android:label="@string/goals"
        tools:layout="@layout/fragment_goals">

        <argument
            android:name="groupId"
            app:argType="long" />
    </fragment>
</navigation>
